objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>R1 Case Mgmt</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Requestor%27s Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Future%2FDeferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Legacy_ID__c</fullName>
        <label>Case Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Problem Resolved</fullName>
                </value>
                <value>
                    <fullName>No issue/Reported in Error</fullName>
                </value>
                <value>
                    <fullName>Merged with another case</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concerning_Org__c</fullName>
        <label>Concerning Org/App</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R1</fullName>
                </value>
                <value>
                    <fullName>Intermedix</fullName>
                </value>
                <value>
                    <fullName>New Integrated R1</fullName>
                </value>
                <value>
                    <fullName>R1 Full Sandbox</fullName>
                </value>
                <value>
                    <fullName>Original IMX Hubspot</fullName>
                </value>
                <value>
                    <fullName>New R1-IMX Hubspot</fullName>
                </value>
                <value>
                    <fullName>R1 Prod AND  Intermedix Prod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ie what Case must be addressed prior to this one being reviewed or started?</inlineHelpText>
        <label>Dependent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Dependent Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Project_Scope__c</fullName>
        <label>In Project Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Scope- Low Priority</fullName>
                </value>
                <value>
                    <fullName>In Scope- High Priority</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Awaiting ML Review</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting ML Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_involves_this_object__c</fullName>
        <label>Issue involves this object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Activity (Task or Event)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_if_Other__c</fullName>
        <inlineHelpText>When in doubt look at the tab you're on when issue arises.</inlineHelpText>
        <label>Object if "Other"</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Who_Requested_if_Not_R1_User__c</fullName>
        <label>Person Who Requested if Not R1 User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Case_Assignment__c</fullName>
        <description>IF
(
AND 
( 
RecordType.DeveloperName  = "Project_Case", 
TEXT( Status )= "Approved and Assigned", 
Owner:Queue.QueueName  = "18 Project Team" 
)
,
IMAGE("/img/samples/color_red.gif", "red", 30, 30),
IMAGE("/img/samples/color_green.gif", "green", 30, 30)
)</description>
        <formula>IF
(
OR
(
(
AND 
( 
RecordType.DeveloperName  = "Project_Case", 
TEXT( Status )= "Approved and Assigned", 
Owner:Queue.QueueName  = "18 Project Team" 
)
),
(
AND 
( 
RecordType.DeveloperName  = "Project_Case", 
TEXT( Status )= "New", 
Owner:Queue.QueueName  = "18 Project Team" 
)
)
)
,
IMAGE("/img/samples/color_red.gif", "red", 30, 30),
IMAGE("/img/samples/color_green.gif", "green", 30, 30)
)</formula>
        <inlineHelpText>If your Project Case's Status is "Approved and Assigned" it cannot be owned by the queue. please update record so a named user takes ownership.</inlineHelpText>
        <label>Project Case Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R1_PROD_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R1 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Name_and_or_URL_for_page__c</fullName>
        <defaultValue>"The more details you can provide, the better. If able, a) give us the name of the record, e.g. R-0235 or Able Cloud account, and/or b) copy and paste the URL for the page you're on."</defaultValue>
        <inlineHelpText>The more details you can provide, the better. If able, a) give us the name of the record, e.g. R-0235 or Able Cloud account, and/or b) copy and paste the URL for the page you're on.</inlineHelpText>
        <label>Record Name and/or URL for page</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <formula>SuppliedName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>debug_info__c</fullName>
        <description>hidden field to capture workflow info</description>
        <label>debug_info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>In_Project_Scope__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_open_closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>In_Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases (open &amp; closed)</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Closed_This_Month</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>In_Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Cases Closed This Year</label>
    </listViews>
    <listViews>
        <fullName>Cases_Owned_by_Annette</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>annette</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Owned by Annette</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Owned_by_Maren</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>maren</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Owned by Maren</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Owned_by_Michelle</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>michelle</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Owned by Michelle</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Owned_by_Mike_Lippman</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>mike</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Owned by Mike Lippman</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Owned_by_Theresa</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>theresa</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Owned by Theresa</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Project_Out_of_Scope_or_Hold</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,Future</value>
        </filters>
        <label>Cases - Project Out of Scope or Hold</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_SalesOps_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cases_SalesOps</label>
        <queue>Cases_SalesOps</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_i_Created_Submitted</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>Annette</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases I Created/Submitted</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Future</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal_Case_No_reassignment_rules</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>New_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>In_Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>greaterOrEqual</operation>
            <value>N_DAYS_AGO:3</value>
        </filters>
        <label>New Cases Last 3 Days</label>
    </listViews>
    <listViews>
        <fullName>Project_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Concerning_Org__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Project_Case_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>Project Cases</label>
        <sharedTo>
            <group>X18_Integration_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AA_test</fullName>
        <active>false</active>
        <businessProcess>R1 Case Mgmt</businessProcess>
        <label>AA test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Case</fullName>
        <active>true</active>
        <businessProcess>R1 Case Mgmt</businessProcess>
        <description>For users in IMX or R1 to request assistance, changes, etc</description>
        <label>Internal Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Case_No_reassignment_rules</fullName>
        <active>true</active>
        <businessProcess>R1 Case Mgmt</businessProcess>
        <label>Internal Case - Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Case</fullName>
        <active>true</active>
        <businessProcess>R1 Case Mgmt</businessProcess>
        <label>Project Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>If_Case_Closed_Reason_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>and(text(Status)="Closed",text(Closed__c)="")</errorConditionFormula>
        <errorDisplayField>Closed__c</errorDisplayField>
        <errorMessage>Please complete the closed reason field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Other_Type_the_Description_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT( Type )="Other",
ISBLANK( Description ))</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>If your "Type" is Other please provide details in the Description field so we can further assist you. The more details you provide, the better. Thank you!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRJ_if_assigned_cannot_be_queue_owner</fullName>
        <active>false</active>
        <description>Owner:Queue.QueueName = "X18_Project_Team"</description>
        <errorConditionFormula>AND
( 
RecordTypeId = "01241000000ve96",
TEXT( Status )= "Approved and Assigned",
Owner:Queue.QueueName = "18 Project Team"
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Once a Project Case has been Approved &amp; Assigned it cannot be owned by the 18 Project Team queue. It must be assigned to a user.</errorMessage>
    </validationRules>
</CustomObject>